# create-dash-app

./: .gitignore  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
.github/workflows/: publish.yml  test.yml
create_dash_app/: __main__.py  generators.py  main.py
create_dash_app/templates/: assets.py  callbacks.py  components.py  keys.py  root.py
create_dash_app/templates/assets/: dash.min.css
src/: generators.py  main.py
src/templates/: assets.py  callbacks.py  components.py  root.py
src/templates/assets/: dbc.min.css
tests/: test_generator.py
