[metadata]
name = create-dash-app
version = 0.0.2
author = Eli Woods
description = Generate boilerplate code for plotly Dash apps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eliwoods/create-dash-app
project_urls =
    Bug Tracker = https://github.com/eliwoods/create-dash-app/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    dash >=2.1.0
    dash-bootstrap-components >=1.0.2

[options.packages.find]
where = src
