[metadata]
name = create-dash-app
version = 0.1.1
author = Eli Woods
description = Generate boilerplate code for plotly Dash apps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eliwoods/create-dash-app
project_urls =
    Bug Tracker = https://github.com/eliwoods/create-dash-app/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    Flask-Cache >=0.13.1
    dash >=2.1.0
    dash-bootstrap-components >=1.0.2
    gunicorn >=20.1.0
    rich >=11.1.0

[options.entry_points]
console_scripts =
    create-dash-app = create_dash_app.main:main

[options.packages.find]
exclude =
    dash_app
    tests
